fdo#60834 Find and Replace dialog: fix replace box selection on click

Change-Id: Ic5256ae05d9b4646651e897b7d4c00d9a84329bb
Reviewed-on: https://gerrit.libreoffice.org/3202
Reviewed-by: Thorsten Behrens <tbehrens@suse.com>
Tested-by: Thorsten Behrens <tbehrens@suse.com>